dataengines/mpris2: tolerate non-standards compliant players like mpris-proxy

BlueZ mpris-proxy doesn't provide "SupportedUriSchemes" or
"SupportedMimeTypes". Since the two properties are not directly used in
the media controller widget, show a debug message instead of rejecting
the player.

BUG: 466288
FIXED-IN: 5.27.3


(cherry picked from commit 177cf79ba2e1a055823677a710399b63bb55efb5)